# PrexRustChallenge

./: .gitignore  Cargo.toml  PrexRustChallenge.postman_collection.json  README.md
src/: client_store.rs  handler.rs  main.rs  requests.rs
