[package]
name = "prex_rust_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.50.0"
